# liana

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  flake.nix
.githooks/: pre-commit
.github/workflows/: ci.yml  deploy-docs.yml
.moss/: index.sqlite
crates/concord-codegen/: Cargo.toml
crates/concord-codegen/src/: main.rs
crates/concord-codegen/src/generator/: rust.rs
crates/concord-codegen/src/parser/: openapi.rs
crates/concord-core/: Cargo.toml
crates/liana-codegen/: Cargo.toml
crates/liana-codegen/src/generator/: rust.rs
crates/liana-codegen/src/parser/: openapi.rs
crates/liana-core/: Cargo.toml
crates/liana-core/src/: lib.rs
docs/: index.md  package.json
docs/.vitepress/: config.ts
docs/design/: ir.md
docs/guide/: index.md
schemas/: petstore.yaml
scripts/: fetch-schema.sh  generate.sh
