[package]
name = "rhi-concord-codegen"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Code generator for concord API bindings"

[[bin]]
name = "concord"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
rhi-concord-core = { path = "../concord-core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
openapiv3 = "2"
anyhow = "1"
